# cachemat

./: CMakeLists.txt  README.md
benchmarks/: bench_matmul.cpp
include/cachemat/: autotune.hpp  matmul.hpp  matrix.hpp
src/: autotune.cpp  matmul_blocked.cpp  matmul_naive.cpp  matrix.cpp
tools/: check-clang-format.sh
